--- a/assets/css/templatemo-liberty-market.css
+++ b/assets/css/templatemo-liberty-market.css
@@ -728,7 +728,7 @@ Banner Style
 */
 
 .main-banner {
-  background-image: url(../images/pexels-omar-ramadan-1739260-6409107.jpg);
+  background-image: url(../images/dietrone.jpeg);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -1261,7 +1261,7 @@ Page Heading Style
 }
 
 .page-heading {
-  background-image: url(../images/pexels-omar-ramadan-1739260-6409107.jpg);
+  background-image: url(../images/dietrone.jpeg);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
